# DAQ-HidrolavadorasMAR

./: Merge-1  README.md
Pruebas con cpp/generate_report/: Reporte final_chatgpt.html  Tabla_muestra.html  report.html  table.html
Pruebas con cpp/generate_report/src/: generate_html.cpp  main.cpp  plotter.C
Pruebas con cpp/report_generator/: CMakeLists.txt  hsimple.root
generate_report/: Reporte final.html  Reporte final.xlsx  generate_html.cpp  generate_report  generate_report.cpp  hsimple.C  hsimple.root  macro1.C  output.txt  ploter.cpp  report.html  run_routines.sh  tpoint.txt
generate_report/data/html/: report_model.html
generate_report/src/: generate_html.cpp  generate_pdf.cpp  generate_report  main.cpp  plotter.C  run_routines.sh
generate_report/style/: main.css
generate_report_Py/: .gitignore  Generate_Report.ui  Information_screen.ui  Measurements_screen.ui  Resume_screen.ui  generate_html.py  generate_pdf.py  report.html
generate_report_Py (Final)/: Generate_Report.ui  Information_screen.ui  Measurements_screen.ui
generate_report_Py (Final)/src/: generate_html.py  generate_pdf.py  generate_report.py  primera_grafica.py  user_interface.py  user_interface_Qt.py
generate_report_Py (Final)/src/tests/: ADC_tests.py  arduino_communication.py  wattmeter_test.py
generate_report_Py/data/density/: .~lock.Densidad_agua.xlsx#  Densidad_agua.xlsx
generate_report_Py/src/: Perdidas_extras.m  backup.py  generate_html.py  generate_pdf.py  generate_report.py  main.py  plotter.py  run_script.sh  send_email.py  user_interface.py  user_interface_Qt.py
(+14 files in other folders)
